syntax = "proto3";
package kk_etcd;
option go_package = "/api_def";
//delete user
message UserDelete {
  message Input {
    string UserName = 1;
  }

  message Output {
  }
}